bumping z-index of ads to prevent page content from appearing above premium expandable units
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@28845 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_ads.scss
+++ b/skins/oasis/css/core/_ads.scss
@@ -19,12 +19,12 @@
 	float: right;
 	margin-bottom: 10px;
 	position: relative;
-	z-index: 1 !important;
+	z-index: 100;
 }
 
 #TOP_RIGHT_BOXAD, #CORP_TOP_RIGHT_BOXAD {
 	margin-bottom: 10px;
-	z-index: 1 !important;
+	z-index: 100;
 }
 
 //Mainpage styling
